tests/auto/qml/qmlcachegen/data/inlineComponentWithId.qml
@@ -1,0 +1,10 @@
+import QtQuick 2.15
+
+Item {
+  component Test: Item {
+    id: test
+    property int t: 42
+    Component.onCompleted: console.info(test.t)
+  }
+  Test {}
+}
